style.css
header{
    background-color: #0b162a;
    color: white;
    display: flex;
    justify-content: space-between;
}

header h3{
    margin: auto 3%;
    font-style: italic;
    font-size: 125%;
}

header ul{
    display: flex;
    justify-content: right;
    min-width: 50%;
  }

header ul li{
    margin: 5% 3%;
}
  
header a{
    color: white;
    font-weight: bold;
  }
  
header a:hover{
    color: #EDB63E;
  }

#container{
    display: flex;
    flex-wrap: wrap;
}

#slug{
    background-color: #3F516E;
    background-image: url("images/68099066760__0D9DABA2-E6E2-4F91-A615-1DE8DF1D740F.jpeg");
    background-size: 100%;
    background-repeat: no-repeat;
    background-position: 25% 45%;
    background-size: 100%;
    width: 100%;
    resize: vertical;
    overflow: hidden;
    font-size: 120%;
    color: white;
    padding: 3% 5%;
}

#slug h3{
    position: relative;
    left: 70%;
    width: 45%;
    font-size: 120%;
    color: #f9aa00;
    font-weight: bolder;
    background-color: #0b162a;
    padding: 1% 1%;
    
}

h1{
   font-size: 200%;
   padding: 2% 2%;
}

h2{
    font-size: 180%;
    padding: 1% 5% 1% 0%;
 }

img{
    width: 50%;
    border-radius: 100%;
    margin: 5% 23%;
    
    
}

.leftcol{
    flex: 1 0 100%;
    max-width: 25%;
    padding-right: 1%;
    border-right: 3px solid #0b162a;
    background-color: white;
    
}

p{
    font-size: 110%;
    line-height: 150%;
}


#aboutme{
    max-width: 75%;
    padding: 1%;
}

#mywork{
    display: flex;
    flex-wrap: wrap;
    
}

#contactme{
    display: flex;
    flex-wrap: wrap;
}


.tile1{
    flex: 2 1 40%;
    padding: 0% 0% 2% 0%;
    margin: 1%; 
    background-image: url("images/Screenshot\ 2023-10-03\ at\ 11.16.19\ PM.png");
    border: 4px solid #5C95FF;
    }

.tile1 a{
    position: absolute;
    z-index: 1;
    display: block;
    width: 35.5%;
    height: 23%;

}

.tile2{
    flex: 2 1 40%;
    padding: 0% 0% 2% 0%;
    margin: 1%; 
    background-image: url("images/Screenshot\ 2023-10-03\ at\ 11.14.46\ PM.png");
    background-size: 102%;
    border: 4px solid #5C95FF;
    }

.tile2 a{
    position: absolute;
    z-index: 1;
    display: block;
    width: 35.5%;
    height: 23%;

}

.tile3{
    flex: 2 1 40%;
    padding: 0% 0% 2% 0%;
    margin: 1%; 
    background-image: url("images/Screenshot\ 2023-10-03\ at\ 11.10.23\ PM.png");
    background-size: cover;
    border: 4px solid #5C95FF;
    }

.tile3 a{
    position: absolute;
    z-index: 1;
    display: block;
    width: 35.5%;
    height: 23%;
}


.tile4{
    flex: 2 1 40%;
    padding: 0% 0% 2% 0%;
    margin: 1%; 
    background-image: url("images/Screenshot\ 2023-10-03\ at\ 11.13.31\ PM.png");
    border: 4px solid #5C95FF;
    }

.tile4 a{
    position: absolute;
    z-index: 1;
    display: block;
    width: 35.5%;
    height: 23%;
}
    


.ftile{
    flex: 2 1 100%;
    padding: 0% 1% 0% 0%;
    margin: 1%; 
    background-image: url("images/Screenshot\ 2023-11-10\ at\ 9.36.47\ AM.png");
    background-size: 105%;
    background-position: center;
    border: 4px solid #5C95FF;        
}

/* style applied to featured work tile that allows the background to hyerlink to content */
.ftile a{
    position: absolute;
    z-index: 1;
    display: block;
    width: 80%;
    height: 77%;
    /* border: 5px solid red; */
}


.tile1 h3{
    color: white;   
    font-size: larger;
    background-color: #5C95FF;
    width: 55%;
    padding: 2% 2%;
    margin-top: 20%;
    }

.tile2 h3{
    color: white;   
    font-size: larger;
    background-color: #5C95FF;
    width: 55%;
    padding: 2% 2%;
    margin-top: 20%;
    }

.tile3 h3{
    color: white;   
    font-size: larger;
    background-color: #5C95FF;
    width: 55%;
    padding: 2% 2%;
    margin-top: 20%;
    }

.tile4 h3{
    color: white;   
    font-size: larger;
    background-color: #5C95FF;
    width: 55%;
    padding: 2% 2%;
    margin-top: 20%;
    }
    
.ftile h3{
    color: white;   
    font-size: larger;
    background-color: #5C95FF;
    width: 35%;
    margin: 40% 0% 10% 0%;
    padding: 3%;

}

.contdetails{
    flex: 1 0 100%;
    max-width: 75%;
    padding: 1%;
    margin: auto;

}

#contactme ul li{
    display: inline;
    padding-right: 5%;
}


footer{
    background-color: #0b162a;
    color: white;
    text-align: center;
    width: 100%;
    padding: 1%;

}

.sechead_one{
    margin: auto;
    padding: auto;
    text-align: center;
    color: #A1710A;
}

.sechead{
    margin-top: 5%;
    padding: auto;
    text-align: center;
    color: #A1710A;
}

.sechead_con{
    margin-top: 10%;
    margin-bottom: 10%;
    padding: auto;
    text-align: center;
    color: #A1710A;
}

.spacer{
    margin: 1%;
}

.samwrk{
    display: flex;
    flex-wrap: wrap;
    flex: 1 0 75%;
}

.samwrk a {
    text-decoration: none;
    color: white;
}

.samwrk a:hover{
    color: #EDB63E;
}

